# zettel

./: .gitignore  Makefile  README.md  migrate_notes.py  pyproject.toml  requirements.txt
src/zettel/: bulk_create_daily.py  cli.py  fzf.py  notebook.py  notes.py  tasks.py  utils.py
src/zt/: cli.py  notebook.py  notes.py
tests/: test_cli.py  test_fzf_features.py  test_notebook.py  test_notes.py  test_tasks.py
tests/notebook/: 20220822T111909.md  20220822T163828.md  daily-20230528.md
tests/notebook/20250101T120000/: index.md
