[project]
name = "zettel"
version = "0.0.0-9002"
description = "A package for notetaking inspired by the zettelkasten method"
dependencies = [
  'typer',
  'rich',
  'pyyaml',
  'humanize',
  'krfzf-py'
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zt = "zettel.cli:app"
