[project]
name = "zettel"
version = "0.0.0-9002"
description = "A package for notetaking inspired by the zettelkasten method"
readme = "README.md"
dependencies = [
  'typer',
  'rich',
  'pyyaml',
  'humanize',
  'krfzf-py',
  'python-frontmatter',
]
[dependency-groups]
dev = ["build"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
zt = "zettel.cli:app"
